--- a/web/src/pages/main/Main.css
+++ b/web/src/pages/main/Main.css
@@ -1,10 +1,7 @@
 .splashContainer {
-    width: calc(100% - 12rem - 2rem);
     text-align: center;
     margin-top: 30px;
     margin-bottom: 40px;
-    justify-content: center;
-    display: flex;
 }
 
 .timerContainer {
@@ -27,7 +24,7 @@
     }
 
     .main {
-        width: calc(100vw - 450px);
+        width: calc(100vw - 40rem);
         float: left;
         overflow-x: hidden;
         height: 100%;
@@ -52,7 +49,7 @@
     .timerContainer {
         text-align: center;
         margin-top: 60px;
-        margin-bottom: 0px;
+        margin-bottom: 0;
     }
 
     .plutaContainer {
@@ -66,6 +63,6 @@
     .chatContainer {
         overflow: auto;
         width: 100%;
-        height: 75%;
+        height: 100%;
     }
 }
